# PodChain

./: .gitignore  CREDITS.md  LICENSE  README.md  pyproject.toml
artifacts/: index.html
docs/: ANATOMY.md  ARCHITECTURE.md  CONCEPT.md  ERROR_HANDLING.md  FACTORY_MODEL.md  POD_SPEC.md  THE_POD.md  USE_CASES.md  VALIDATION.md
examples/website_builder/: input.yaml  pod.yaml  run.py
podchain/: receipt.py  runner.py  validator.py
templates/: chain.template.yaml  error.template.json  input.template.yaml  pod.template.yaml  receipt.template.json  validator.template.yaml
templates/scenarios/app/: chain.yaml  pod.backend.yaml  pod.frontend.yaml
templates/scenarios/landing_page/: chain.yaml
templates/scenarios/neelam_phase5/: chain.yaml  pod.deploy.yaml  pod.prereq.yaml
templates/scenarios/software/: chain.yaml  pod.test.yaml
templates/scenarios/website/: chain.yaml
tests/: test_runner.py
